<resources>
    <string name="app_name">TutorLogin</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--  Tutor Page Strings  -->
    <string name="tutor_name">"Tutor's Name"</string>
    <string name="student_list">"Student Queue"</string>
    <string name="tutor_list">"Tutors Logged-In"</string>
    <string name="lrc_schedule">"LRC Schedule"</string>
    <string name="course_by_tutor">"Course By Tutor"</string>

    <!--  Admin Page Strings  -->
    <string name="admin_page">Admin Page</string>
    <string name="list">Current Tutor List:</string>
    <string name="add">Add Employee</string>
    
    <string name="log_out">Log Out</string>

    <!--  Tutor List Strings  -->
    <string name="tutor_temp">Tutor Temp</string>
    <string name="tutor_subject_temp">Subject Temp</string>

    <!--  Add Tutor Strings  -->
    <string name="add_page_title">Adding Employee</string>
    <string name="employee_id">Dolphin ID: </string>
    <string name="employee_name">Name: </string>
    <string name="employee_role">Role:  </string>
    <string name="employee_subjects">Subject(s): </string>
    <string name="employee_hours">Hours: </string>
    <string name="employee_days">Days: </string>
    <string name="input_name">FirstName LastName</string>
    <string name="input_role">STEM Tutor, LRC Tutor, Lead, etc.</string>
    <string name="input_subjects">MATH, COMP, etc.</string>
    <string name="input_email">fName.lName123@csuci.edu</string>
    <string name="input_password">DolphinID#</string>
    <string name="input_file_name">Enter File Name</string>
    <string name="Monday">MON:</string>
    <string name="Tuesday">TUE:</string>
    <string name="Wednesday">WED:</string>
    <string name="Thursday">THUR:</string>
    <string name="Friday">FRI:</string>
    <string name="Saturday">SAT:</string>
    <string name="Sunday">SUN:</string>
    <string name="time_prompt">Start</string>
    <string name="time_prompt2">End</string>
    <string name="to_text">to</string>
    <string-array name="time_array">
        <item>Select Hour</item>
        <item>12:00 AM</item>
        <item>12:30 AM</item>
        <item>1:00 AM</item>
        <item>1:30 AM</item>
        <item>2:00 AM</item>
        <item>2:30 AM</item>
        <item>3:00 AM</item>
        <item>3:30 AM</item>
        <item>4:00 AM</item>
        <item>4:30 AM</item>
        <item>5:00 AM</item>
        <item>5:30 AM</item>
        <item>6:00 AM</item>
        <item>6:30 AM</item>
        <item>7:00 AM</item>
        <item>7:30 AM</item>
        <item>8:00 AM</item>
        <item>8:30 AM</item>
        <item>9:00 AM</item>
        <item>9:30 AM</item>
        <item>10:00 AM</item>
        <item>10:30 AM</item>
        <item>11:00 AM</item>
        <item>11:30 AM</item>

        <item>12:00 PM</item>
        <item>12:30 PM</item>
        <item>1:00 PM</item>
        <item>1:30 PM</item>
        <item>2:00 PM</item>
        <item>2:30 PM</item>
        <item>3:00 PM</item>
        <item>3:30 PM</item>
        <item>4:00 PM</item>
        <item>4:30 PM</item>
        <item>5:00 PM</item>
        <item>5:30 PM</item>
        <item>6:00 PM</item>
        <item>6:30 PM</item>
        <item>7:00 PM</item>
        <item>7:30 PM</item>
        <item>8:00 PM</item>
        <item>8:30 PM</item>
        <item>9:00 PM</item>
        <item>9:30 PM</item>
        <item>10:00 PM</item>
        <item>10:30 PM</item>
        <item>11:00 PM</item>
        <item>11:30 PM</item>
    </string-array>

    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="image">Choose File</string>
    <string name="submit_button">Add Tutor</string>
    <string name="cancel_button">Cancel</string>

    <!--  Edit Tutor Strings  -->
    <string name="selected_tutor">Selected Tutor</string>
    <string name="delete">Remove Tutor</string>
    <string name="edit">Edit Tutor</string>

    <!--  Subject Legend  -->
    <string name="subject_legend">Subject Legend:</string>
    <string name="math">MATH: </string>
    <string name="mathematics">\tMathematics </string>
    <string name="chem">CHEM: </string>
    <string name="chemistry">\tChemistry </string>
    <string name="bus">BUS: </string>
    <string name="business">\tBusiness </string>
    <string name="econ">ECON: </string>
    <string name="economics">\tEconomics </string>
    <string name="bio">BIO: </string>
    <string name="biology">\tBiology </string>
    <string name="phys">PHYS: </string>
    <string name="physics">\tPhysics </string>
    <string name="psych">PSYCH: </string>
    <string name="psychology">\tPsychology </string>
    <string name="soci">SOCI: </string>
    <string name="sociology">\tSociology </string>
    <string name="heatlh_sci">HEATLH SCI: </string>
    <string name="health_science">\tHealth Science </string>
    <string name="comp">COMP: </string>
    <string name="computer_science">\tComputer Science </string>
    <string name="nursing_nursing">NURSING: </string>
    <string name="nursing">\tNursing</string>


</resources>