<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TutorHub"
    android:layout_alignParentBottom="true"
    android:padding="15dp"
    android:background="@color/white">

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="78dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:src="@drawable/profile_icon">-->

<!--    </ImageView>-->

    <TextView
        android:id="@+id/tutorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tutor_name"
        android:textSize="30sp"
        android:textColor="@android:color/black">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:text="@string/student_list">

    </TextView>

    <ListView
        android:id="@+id/student_queue_list"
        android:layout_width="match_parent"
        android:layout_height="200dp">

    </ListView>

    <TextView
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:text="@string/tutor_list">

    </TextView>

    <ListView
        android:id="@+id/tutor_queue_list"
        android:layout_width="wrap_content"
        android:layout_height="200dp">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lrc_schedule_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lrc_schedule">
        </Button>

        <Button
            android:id="@+id/course_by_tutor_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/course_by_tutor">

        </Button>

    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/log_out" />

</LinearLayout>

